--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "openai": "^4.58.1",
     "@clerk/clerk-react": "^5.44.0",
     "@clerk/express": "^1.3.20",
     "lucide-react": "^0.542.0",
