chore(routing): enforce canonical domain to https://www.firstclassfranchise.com via Vercel redirect and client-side guard; add canonical link tag

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,12 @@
 {
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [{ "type": "host", "value": "firstclassfranchise.com" }],
+      "destination": "https://www.firstclassfranchise.com/$1",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api" },
     { "source": "/(.*)", "destination": "/" }
