--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "openai": "^4.58.1",
+    "cookie-parser": "^1.4.6",
     "@clerk/clerk-react": "^5.44.0",
     "@clerk/express": "^1.3.20",
     "lucide-react": "^0.542.0",
