--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "gen:icons": "node scripts/generate-icons.mjs"
   },
   "dependencies": {
-    "openai": "^4.58.1",
-    "cookie-parser": "^1.4.6",
     "@clerk/clerk-react": "^5.44.0",
     "@clerk/express": "^1.3.20",
-    "lucide-react": "^0.542.0",
+    "@prisma/client": "^5.18.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
-    "zod": "^3.23.8",
+    "googleapis": "^140.0.1",
+    "lucide-react": "^0.542.0",
+    "openai": "^4.58.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
-    "@prisma/client": "^5.18.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -34,11 +35,11 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "prisma": "^5.18.0",
+    "sharp": "^0.33.4",
     "tailwindcss": "^4.1.12",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2",
-    "prisma": "^5.18.0",
-    "sharp": "^0.33.4"
+    "vite": "^7.1.2"
   }
 }
