--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "gen:icons": "node scripts/generate-icons.mjs"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.44.0",
-    "@clerk/express": "^1.3.20",
+    
     "@prisma/client": "^5.18.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
+    "firebase": "^12.2.1",
+    "firebase-admin": "^12.6.0",
     "lucide-react": "^0.542.0",
     "openai": "^4.58.1",
     "react": "^19.1.1",
