--- a/clipyr/requirements.txt
+++ b/clipyr/requirements.txt
@@ -1,4 +1,3 @@
-gradio==4.44.0
 openai-whisper==20231117
 opencv-python==4.8.1.78
 moviepy==1.0.3
@@ -13,3 +12,6 @@ Pillow==10.1.0
 ffmpeg-python==0.2.0
 yt-dlp==2023.12.30
 requests==2.31.0
+fastapi==0.116.2
+uvicorn[standard]==0.35.0
+python-multipart==0.0.20
