--- a/render.yaml
+++ b/render.yaml
@@ -6,12 +6,8 @@ services:
     numInstances: 1
     region: oregon
     dockerfilePath: clipyr/Dockerfile
-    healthCheckPath: /
+    healthCheckPath: /api/healthz
     autoDeploy: false
     envVars:
       - key: PYTHONUNBUFFERED
         value: "1"
-      - key: GRADIO_SERVER_NAME
-        value: "0.0.0.0"
-      - key: GRADIO_SERVER_PORT
-        value: "7860"
